// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EzButton should render primary button with destructive styles 1`] = `
.recipe-0 {
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  font-weight: 700;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.2857142857142857rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-tap-highlight-color: transparent;
  color: #ffffff;
  border-color: #ec5353;
  border-color: #ec5353;
  background-color: #ec5353;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.12);
  padding: 0.5714285714285714rem 1.1428571428571428rem;
}

.recipe-0:hover:enabled {
  border-color: #c84646;
}

.recipe-0:focus:enabled {
  border-color: #b13e3e;
}

.recipe-0:active:enabled {
  border-color: #b13e3e;
}

.recipe-0:hover:enabled {
  background-color: #c84646;
}

.recipe-0:active:enabled {
  background-color: #b13e3e;
}

<button
  className="recipe-0"
>
  Click Me
</button>
`;

exports[`EzButton should render primary button with loading styles 1`] = `
.recipe-0 {
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  font-weight: 700;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.2857142857142857rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-tap-highlight-color: transparent;
  color: #ffffff;
  border-color: #3e90d6;
  border-color: #3e90d6;
  background-color: #3e90d6;
  cursor: default;
  opacity: 0.45;
  pointer-events: none;
  position: relative;
  color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.12);
  padding: 0.5714285714285714rem 1.1428571428571428rem;
}

.recipe-0:hover:enabled {
  border-color: #347ab5;
}

.recipe-0:focus:enabled {
  border-color: #2e6ca0;
}

.recipe-0:active:enabled {
  border-color: #2e6ca0;
}

.recipe-0:hover:enabled {
  background-color: #347ab5;
}

.recipe-0:active:enabled {
  background-color: #2e6ca0;
}

.recipe-0::before {
  position: absolute;
  content: '';
  top: 50%;
  left: 50%;
  margin: -0.642857145rem 0 0 -0.642857145rem;
  width: 1.28571429rem;
  height: 1.28571429rem;
  border-radius: 10rem;
  border: 0.2rem solid rgba(0,0,0,0.15);
}

.recipe-0::after {
  position: absolute;
  content: '';
  top: 50%;
  left: 50%;
  margin: -0.642857145rem 0 0 -0.642857145rem;
  width: 1.28571429rem;
  height: 1.28571429rem;
  -webkit-animation: animation-1c980os 0.6s linear;
  animation: animation-1c980os 0.6s linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  border-radius: 10rem;
  border-color: #ffffff transparent transparent;
  border-style: solid;
  border-width: 0.2rem;
  box-shadow: 0 0 0 1px transparent;
}

<button
  className="recipe-0"
  disabled={true}
>
  Click Me
</button>
`;

exports[`EzButton should render secondary button with destructive styles 1`] = `
.recipe-0 {
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  font-weight: 700;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.2857142857142857rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-tap-highlight-color: transparent;
  background-color: white;
  border: solid 1px;
  border-color: #ced4d9;
  color: #ec5353;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.12);
  padding: 0.5714285714285714rem 1.1428571428571428rem;
}

.recipe-0:hover:enabled {
  border-color: #afb4b8;
}

.recipe-0:focus:enabled {
  border-color: #3e90d6;
}

.recipe-0:active:enabled {
  border-color: #9a9fa2;
}

.recipe-0:hover:enabled {
  color: #c84646;
}

.recipe-0:active:enabled {
  color: #b13e3e;
}

<button
  className="recipe-0"
>
  Click Me
</button>
`;

exports[`EzButton should render secondary button with loading styles 1`] = `
.recipe-0 {
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  font-weight: 700;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.2857142857142857rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-tap-highlight-color: transparent;
  background-color: white;
  border: solid 1px;
  border-color: #ced4d9;
  color: #3e90d6;
  cursor: default;
  opacity: 0.45;
  pointer-events: none;
  position: relative;
  color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.12);
  padding: 0.5714285714285714rem 1.1428571428571428rem;
}

.recipe-0:hover:enabled {
  border-color: #afb4b8;
}

.recipe-0:focus:enabled {
  border-color: #3e90d6;
}

.recipe-0:active:enabled {
  border-color: #9a9fa2;
}

.recipe-0:hover:enabled {
  color: #347ab5;
}

.recipe-0:active:enabled {
  color: #2e6ca0;
}

.recipe-0::before {
  position: absolute;
  content: '';
  top: 50%;
  left: 50%;
  margin: -0.642857145rem 0 0 -0.642857145rem;
  width: 1.28571429rem;
  height: 1.28571429rem;
  border-radius: 10rem;
  border: 0.2rem solid rgba(0,0,0,0.15);
}

.recipe-0::after {
  position: absolute;
  content: '';
  top: 50%;
  left: 50%;
  margin: -0.642857145rem 0 0 -0.642857145rem;
  width: 1.28571429rem;
  height: 1.28571429rem;
  -webkit-animation: animation-1c980os 0.6s linear;
  animation: animation-1c980os 0.6s linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  border-radius: 10rem;
  border-color: #565a5c transparent transparent;
  border-style: solid;
  border-width: 0.2rem;
  box-shadow: 0 0 0 1px transparent;
}

<button
  className="recipe-0"
  disabled={true}
>
  Click Me
</button>
`;

exports[`EzButton should render tertiary button with destructive styles 1`] = `
.recipe-0 {
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  font-weight: 700;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.2857142857142857rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-tap-highlight-color: transparent;
  background: none;
  border: none;
  color: #ec5353;
}

.recipe-0:hover:enabled {
  color: #c84646;
}

.recipe-0:active:enabled {
  color: #b13e3e;
}

<button
  className="recipe-0"
>
  Click Me
</button>
`;

exports[`EzButton should render with disabled styles 1`] = `
.recipe-0 {
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  font-weight: 700;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.2857142857142857rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-tap-highlight-color: transparent;
  color: #ffffff;
  border-color: #3e90d6;
  border-color: #3e90d6;
  background-color: #3e90d6;
  cursor: default;
  opacity: 0.45;
  pointer-events: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.12);
  padding: 0.5714285714285714rem 1.1428571428571428rem;
}

.recipe-0:hover:enabled {
  border-color: #347ab5;
}

.recipe-0:focus:enabled {
  border-color: #2e6ca0;
}

.recipe-0:active:enabled {
  border-color: #2e6ca0;
}

.recipe-0:hover:enabled {
  background-color: #347ab5;
}

.recipe-0:active:enabled {
  background-color: #2e6ca0;
}

<button
  className="recipe-0"
  disabled={true}
>
  Click Me
</button>
`;

exports[`EzButton should render with primary styles 1`] = `
.recipe-0 {
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  font-weight: 700;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.2857142857142857rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-tap-highlight-color: transparent;
  color: #ffffff;
  border-color: #3e90d6;
  border-color: #3e90d6;
  background-color: #3e90d6;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.12);
  padding: 0.5714285714285714rem 1.1428571428571428rem;
}

.recipe-0:hover:enabled {
  border-color: #347ab5;
}

.recipe-0:focus:enabled {
  border-color: #2e6ca0;
}

.recipe-0:active:enabled {
  border-color: #2e6ca0;
}

.recipe-0:hover:enabled {
  background-color: #347ab5;
}

.recipe-0:active:enabled {
  background-color: #2e6ca0;
}

<button
  className="recipe-0"
>
  Click Me
</button>
`;

exports[`EzButton should render with secondary styles 1`] = `
.recipe-0 {
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  font-weight: 700;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.2857142857142857rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-tap-highlight-color: transparent;
  background-color: white;
  border: solid 1px;
  border-color: #ced4d9;
  color: #3e90d6;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.12);
  padding: 0.5714285714285714rem 1.1428571428571428rem;
}

.recipe-0:hover:enabled {
  border-color: #afb4b8;
}

.recipe-0:focus:enabled {
  border-color: #3e90d6;
}

.recipe-0:active:enabled {
  border-color: #9a9fa2;
}

.recipe-0:hover:enabled {
  color: #347ab5;
}

.recipe-0:active:enabled {
  color: #2e6ca0;
}

<button
  className="recipe-0"
>
  Click Me
</button>
`;

exports[`EzButton should render with tertiary styles 1`] = `
.recipe-0 {
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  font-weight: 700;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.2857142857142857rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-tap-highlight-color: transparent;
  background: none;
  border: none;
  color: #3e90d6;
}

.recipe-0:hover:enabled {
  color: #347ab5;
}

.recipe-0:active:enabled {
  color: #2e6ca0;
}

<button
  className="recipe-0"
>
  Click Me
</button>
`;
